--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -102,10 +102,10 @@
   &__checkbox {
     width: 1.25rem;
     height: 1.25rem;
-    accent-color: $primary-600; // Esto cambia el color del check para que combine con tu tema
+    accent-color: $primary-600;
     cursor: pointer;
     border-radius: $radius-sm;
-    margin-top: 0.125rem; // Para alinearlo perfecto con el texto
+    margin-top: 0.125rem; 
   }
 
   &__checkbox-label {
